force-app/main/default/objects/Expense__c/fields/Comments_History__c.field-meta.xml
<CustomField>
    <fullName>Comments_History__c</fullName>
    <description>Full comments history with timestamps for the expense report</description>
    <label>Comments History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>