force-app/main/default/objects/Expense__c/fields/Finance_Approver__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approver__c</fullName>
    <label>Finance Approver</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Finance Approved Expenses</relationshipLabel>
    <relationshipName>Finance_Approved_Expenses</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>