force-app/main/default/objects/Expense__c/fields/Finance_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Finance_Remarks__c</fullName>
    <label>Finance Remarks</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>