force-app/main/default/objects/Expense__c/fields/L1_Approver__c.field-meta.xml
<CustomField>
    <fullName>L1_Approver__c</fullName>
    <label>L1 Approver (Manager)</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>L1 Approver Expenses</relationshipLabel>
    <relationshipName>L1_Approver_Expenses</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Designated L1 approver for this expense, auto-populated from Employee record</description>
</CustomField>