force-app/main/default/objects/Expense__c/fields/L2_Approver__c.field-meta.xml
<CustomField>
    <fullName>L2_Approver__c</fullName>
    <label>L2 Approver (Finance)</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>L2 Approver Expenses</relationshipLabel>
    <relationshipName>L2_Approver_Expenses</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Designated L2 approver for this expense, auto-populated from Employee record</description>
</CustomField>