force-app/main/default/objects/Expense__c/fields/Manager_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approved_Date__c</fullName>
    <label>Manager Approved Date</label>
    <type>DateTime</type>
</CustomField>