force-app/main/default/objects/Expense__c/fields/Manager_Approver__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approver__c</fullName>
    <label>Manager Approver</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Manager Approved Expenses</relationshipLabel>
    <relationshipName>Manager_Approved_Expenses</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>