force-app/main/default/objects/Expense__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Submitted</fullName><default>false</default><label>Submitted</label></value>
            <value><fullName>Manager Approved</fullName><default>false</default><label>Manager Approved</label></value>
            <value><fullName>Finance Approved</fullName><default>false</default><label>Finance Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Paid</fullName><default>false</default><label>Paid</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>