force-app/main/default/objects/Expense__c/fields/Total_Approved__c.field-meta.xml
<CustomField>
    <fullName>Total_Approved__c</fullName>
    <label>Total Approved</label>
    <type>Summary</type>
    <summarizedField>Expense_Item__c.Approved_Amount__c</summarizedField>
    <summaryForeignKey>Expense_Item__c.Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
</CustomField>