force-app/main/default/objects/Expense__c/fields/Total_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Total_Claimed__c</fullName>
    <label>Total Claimed</label>
    <type>Summary</type>
    <summarizedField>Expense_Item__c.Claimed_Amount__c</summarizedField>
    <summaryForeignKey>Expense_Item__c.Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
</CustomField>