force-app/main/default/objects/Expense__c/fields/Total_Distance_KM__c.field-meta.xml
<CustomField>
    <fullName>Total_Distance_KM__c</fullName>
    <label>Total Distance KM</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>