force-app/main/default/objects/Expense__c/fields/Total_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Total_Eligible__c</fullName>
    <label>Total Eligible</label>
    <type>Summary</type>
    <summarizedField>Expense_Item__c.Eligible_Amount__c</summarizedField>
    <summaryForeignKey>Expense_Item__c.Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
</CustomField>