force-app/main/default/objects/Expense__c/fields/Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Working_Days__c</fullName>
    <label>Working Days</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>