force-app/main/default/objects/Expense__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>