force-app/main/default/objects/Expense__c/listViews/Approved.listView-meta.xml
<ListView>
    <fullName>Approved</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Total_Claimed__c</columns>
    <columns>Total_Approved__c</columns>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Finance Approved</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Approved</label>
</ListView>