force-app/main/default/objects/Expense__c/listViews/Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Total_Claimed__c</columns>
    <columns>Submitted_Date__c</columns>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted,Manager Approved</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Pending Approval</label>
</ListView>